--- a/index.html
+++ b/index.html
@@ -584,45 +584,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="grid grid-4">
-                <div>
-                    <h4>Active Innovative</h4>
-                    <p>Channel Partner of Blue Star since 2011.</p>
-                </div>
-                <div>
-                    <h4>Quick Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Contact</h4>
-                    <ul class="footer-links">
-                        <li><i class="fas fa-phone"></i> +91 12345 67890</li>
-                        <li><i class="fas fa-envelope"></i> info@activeinnovative.com</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Follow Us</h4>
-                    <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center" style="margin-top: 3rem; opacity: 0.5;">
-                <p>&copy; 2025 Active Innovative Systems. All rights reserved.</p>
-            </div>
+        <div class="container text-center">
+            <p style="opacity: 0.6;">&copy; 2025 Active Innovative Systems. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Main JS -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
