--- a/index.html
+++ b/index.html
@@ -53,8 +53,19 @@
                 <li><a href="#contact">Contact Us</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle Dark Mode">
-                        <i class="fas fa-moon"></i>
+                        <i class="fas fa-sun"></i>
                     </button>
+                </li>
+                <!-- Mobile Only Contact Icons -->
+                <li class="mobile-only-item">
+                    <a href="tel:+911234567890"><i class="fas fa-phone-alt"></i> Call Us</a>
+                </li>
+                <li class="mobile-only-item">
+                    <div class="social-links-mobile">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </li>
             </ul>
         </div>
