--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
 <body>
 
     <!-- Top Bar (Hero Bar style) -->
+    <div class="top-bar bg-primary text-white py-2">
+        <div class="container d-flex justify-between align-center">
+            <div class="contact-info text-sm">
+                <span><i class="fas fa-phone-alt me-2"></i> +91 12345 67890</span>
+                <span class="ms-3"><i class="fas fa-envelope me-2"></i> info@activeinnovative.com</span>
+            </div>
+            <div class="social-links text-sm">
+                <a href="#" class="text-white me-2"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="text-white me-2"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Main Navbar -->
