--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                         Star Official Channel Partner</span>
                 </div>
             </div>
+            <!-- Mobile Theme Toggle -->
+            <button class="theme-toggle-btn theme-toggle-mobile" aria-label="Toggle Dark Mode"
+                style="margin-left: auto; margin-right: 1rem;">
+                <i class="fas fa-sun"></i>
+            </button>
+
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
             </div>
